--- a/quora-question-pairs/01.ipynb
+++ b/quora-question-pairs/01.ipynb
@@ -17,13 +17,13 @@
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('./datasets/train.csv')\n",
-    "test_df = pd.read_csv('./datasets/test.csv')\n",
+    "\n",
     "sample_df = pd.read_csv('./datasets/sample_submission.csv') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,16 +32,15 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 404287 entries, 0 to 404289\n",
-      "Data columns (total 7 columns):\n",
+      "Data columns (total 6 columns):\n",
       "id              404287 non-null int64\n",
       "qid1            404287 non-null int64\n",
       "qid2            404287 non-null int64\n",
       "question1       404287 non-null object\n",
       "question2       404287 non-null object\n",
       "is_duplicate    404287 non-null int64\n",
-      "text            404287 non-null object\n",
-      "dtypes: int64(4), object(3)\n",
-      "memory usage: 24.7+ MB\n"
+      "dtypes: int64(4), object(2)\n",
+      "memory usage: 21.6+ MB\n"
      ]
     }
    ],
@@ -52,67 +51,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nltk.corpus import stopwords\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "train_df['text'] = train_df['question1'] + train_df['question2']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "stops_word = stopwords.words(\"english\")\n",
-    "tfidf_vec = CountVectorizer(analyzer='word',  max_features=1000, stop_words=stops_word)"
+    "tfidf_vec = TfidfVectorizer(analyzer='word',  max_features=1000, stop_words=stops_word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = tfidf_vec.fit_transform(train_df['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<404287x1000 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 1872416 stored elements in Compressed Sparse Row format>"
+       "(404287, 1000)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tfidf_vec.fit_transform(train_df['text'])"
+    "X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df['q1'] = tfidf_vec.transform(train_df['question1'])"
+    "Y_train = train_df['is_duplicate']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_train.toarray(), Y_train, test_size = 0.1, \n",
+    "                                                   stratify=Y_train, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rf_clf = RandomForestClassifier()\n",
+    "# rf_clf.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin_log = LogisticRegression()\n",
+    "lin_log.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_pred = lin_log.predict(X_test)\n",
+    "loss = np.sqrt(mean_squared_error(Y_pred, Y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5449903845763835"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7029854807192857"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(Y_pred, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_df\n",
+    "test_df = pd.read_csv('./datasets/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# test_df = test_df.dropna()\n",
+    "test_df['text'] = test_df['question1'] + test_df['question2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df['text'] = test_df['text'].fillna(\"\")\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_f = tfidf_vec.transform(test_df['text']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_test_f = lin_log.predict(X_test_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -136,14 +306,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>qid1</th>\n",
-       "      <th>qid2</th>\n",
-       "      <th>question1</th>\n",
-       "      <th>question2</th>\n",
+       "      <th>test_id</th>\n",
        "      <th>is_duplicate</th>\n",
-       "      <th>text</th>\n",
-       "      <th>q1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -151,97 +315,61 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>What is the step by step guide to invest in sh...</td>\n",
-       "      <td>What is the step by step guide to invest in sh...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>What is the step by step guide to invest in sh...</td>\n",
-       "      <td>(0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>What is the story of Kohinoor (Koh-i-Noor) Dia...</td>\n",
-       "      <td>What would happen if the Indian government sto...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>What is the story of Kohinoor (Koh-i-Noor) Dia...</td>\n",
-       "      <td>(0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>How can I increase the speed of my internet co...</td>\n",
-       "      <td>How can Internet speed be increased by hacking...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>How can I increase the speed of my internet co...</td>\n",
-       "      <td>(0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Why am I mentally very lonely? How can I solve...</td>\n",
-       "      <td>Find the remainder when [math]23^{24}[/math] i...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Why am I mentally very lonely? How can I solve...</td>\n",
-       "      <td>(0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Which one dissolve in water quikly sugar, salt...</td>\n",
-       "      <td>Which fish would survive in salt water?</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Which one dissolve in water quikly sugar, salt...</td>\n",
-       "      <td>(0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  qid1  qid2                                          question1  \\\n",
-       "0   0     1     2  What is the step by step guide to invest in sh...   \n",
-       "1   1     3     4  What is the story of Kohinoor (Koh-i-Noor) Dia...   \n",
-       "2   2     5     6  How can I increase the speed of my internet co...   \n",
-       "3   3     7     8  Why am I mentally very lonely? How can I solve...   \n",
-       "4   4     9    10  Which one dissolve in water quikly sugar, salt...   \n",
-       "\n",
-       "                                           question2  is_duplicate  \\\n",
-       "0  What is the step by step guide to invest in sh...             0   \n",
-       "1  What would happen if the Indian government sto...             0   \n",
-       "2  How can Internet speed be increased by hacking...             0   \n",
-       "3  Find the remainder when [math]23^{24}[/math] i...             0   \n",
-       "4            Which fish would survive in salt water?             0   \n",
-       "\n",
-       "                                                text  \\\n",
-       "0  What is the step by step guide to invest in sh...   \n",
-       "1  What is the story of Kohinoor (Koh-i-Noor) Dia...   \n",
-       "2  How can I increase the speed of my internet co...   \n",
-       "3  Why am I mentally very lonely? How can I solve...   \n",
-       "4  Which one dissolve in water quikly sugar, salt...   \n",
-       "\n",
-       "                                                  q1  \n",
-       "0    (0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...  \n",
-       "1    (0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...  \n",
-       "2    (0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...  \n",
-       "3    (0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...  \n",
-       "4    (0, 439)\\t1\\n  (0, 461)\\t1\\n  (0, 539)\\t1\\n ...  "
+       "   test_id  is_duplicate\n",
+       "0        0             1\n",
+       "1        1             1\n",
+       "2        2             1\n",
+       "3        3             1\n",
+       "4        4             1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sample_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pd.DataFrame({\n",
+    "    'test_id':sample_df['test_id'],\n",
+    "    'is_duplicate': Y_test_f\n",
+    "})\n",
+    "result.to_csv(\"./result.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
