--- a/competitive-data-science-predict-future-sales/01.ipynb
+++ b/competitive-data-science-predict-future-sales/01.ipynb
@@ -2739,6 +2739,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ExtraTreesRegressor(bootstrap=False, criterion='mse', max_depth=15,\n",
+       "          max_features='auto', max_leaf_nodes=None,\n",
+       "          min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "          min_samples_leaf=1, min_samples_split=2,\n",
+       "          min_weight_fraction_leaf=0.0, n_estimators=25, n_jobs=-1,\n",
+       "          oob_score=False, random_state=18, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 模型\n",
+    "reg = sklearn.ensemble.ExtraTreesRegressor(n_estimators=25, n_jobs=-1, max_depth=15, random_state=18)\n",
+    "reg.fit(x1, y1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = reg.predict(x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.27719197941404544\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('RMSE:', np.sqrt(sklearn.metrics.mean_squared_error(y2.clip(0.,20.),y_pred.clip(0.,20.))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ExtraTreesRegressor(bootstrap=False, criterion='mse', max_depth=15,\n",
+       "          max_features='auto', max_leaf_nodes=None,\n",
+       "          min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "          min_samples_leaf=1, min_samples_split=2,\n",
+       "          min_weight_fraction_leaf=0.0, n_estimators=25, n_jobs=-1,\n",
+       "          oob_score=False, random_state=18, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.fit(train[col], train['item_cnt_month'].clip(0. ,20.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['item_cnt_month'] = reg.predict(test[col]).clip(0.,20.)\n",
+    "test[['ID','item_cnt_month']].to_csv('submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 其他模型 lightbgm xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#XGBoost\n",
+    "def xgb_rmse(preds, y):\n",
+    "    y = y.get_label()\n",
+    "    score = np.sqrt(sklearn.metrics.mean_squared_error(y.clip(0., 20.), preds.clip(0., 20.)))\n",
+    "    return 'RMSE', score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {'eta':0.2, 'max_depth':4, 'objective':'reg:linear', 'eval_metric':'rmse', 'seed':18, 'silent':True}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:0.555144\tvaild-rmse:0.522299\ttrain-RMSE:0.555144\tvaild-RMSE:0.522299\n",
+      "Multiple eval metrics have been passed: 'vaild-RMSE' will be used for early stopping.\n",
+      "\n",
+      "Will train until vaild-RMSE hasn't improved in 20 rounds.\n",
+      "[10]\ttrain-rmse:0.325569\tvaild-rmse:0.272592\ttrain-RMSE:0.325569\tvaild-RMSE:0.272592\n",
+      "[20]\ttrain-rmse:0.318357\tvaild-rmse:0.272729\ttrain-RMSE:0.318357\tvaild-RMSE:0.272729\n",
+      "[30]\ttrain-rmse:0.317031\tvaild-rmse:0.272758\ttrain-RMSE:0.317031\tvaild-RMSE:0.272758\n",
+      "[40]\ttrain-rmse:0.316127\tvaild-rmse:0.272608\ttrain-RMSE:0.316127\tvaild-RMSE:0.272608\n",
+      "Stopping. Best iteration:\n",
+      "[22]\ttrain-rmse:0.318029\tvaild-rmse:0.271957\ttrain-RMSE:0.318029\tvaild-RMSE:0.271957\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "watchlist = [(xgb.DMatrix(x1, y1), 'train'), (xgb.DMatrix(x2, y2), 'vaild')]\n",
+    "xgb_model = xgb.train(params, xgb.DMatrix(x1, y1), 100, watchlist, verbose_eval=10, feval=xgb_rmse, \n",
+    "                     maximize=False, early_stopping_rounds=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " test['item_cnt_month'] = xgb_model.predict(xgb.DMatrix(test[col]), ntree_limit=xgb_model.best_ntree_limit)\n",
+    " test[['ID','item_cnt_month']].to_csv('xgb_submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#LightGBM\n",
+    "def lgb_rmse(preds, y):\n",
+    "    y = np.array(list(y.get_label()))\n",
+    "    score = np.sqrt(sklearn.metrics.mean_squared_error(y.clip(0.,20.), preds.clip(0.,20.)))\n",
+    "    return 'RMSE', score, False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {'learning_rate': 0.2, 'max_depth': 7, 'boosting': 'gbdt',\n",
+    "          'objective': 'regression', 'metric': 'mse', 'is_training_metric': False, 'seed': 18}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training until validation scores don't improve for 20 rounds.\n",
+      "[10]\tvalid_0's l2: 0.077239\tvalid_0's RMSE: 0.277919\n",
+      "[20]\tvalid_0's l2: 0.0753275\tvalid_0's RMSE: 0.274458\n",
+      "[30]\tvalid_0's l2: 0.075587\tvalid_0's RMSE: 0.274931\n",
+      "Early stopping, best iteration is:\n",
+      "[13]\tvalid_0's l2: 0.0749424\tvalid_0's RMSE: 0.273756\n"
+     ]
+    }
+   ],
+   "source": [
+    "lgb_model = lgb.train(params, lgb.Dataset(x1, label=y1), 100, \n",
+    "                      lgb.Dataset(x2, label=y2), feval=lgb_rmse, verbose_eval=10, early_stopping_rounds=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['item_cnt_month'] = lgb_model.predict(test[col], num_iteration=lgb_model.best_iteration)\n",
+    "test[['ID','item_cnt_month']].to_csv('lgb_submission.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
