--- a/digit_recognizer/07-ann-cnn-rnn.ipynb
+++ b/digit_recognizer/07-ann-cnn-rnn.ipynb
@@ -25,13 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
       "  return f(*args, **kwds)\n"
      ]
@@ -47,6 +51,7 @@
     "import  matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "import seaborn as sns\n",
+    "import tensorflow as tf\n",
     "# import warnings"
    ]
   },
@@ -789,11 +794,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 最基本的ANN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 基本参数\n",
+    "learning_rate = 0.01\n",
+    "num_steps = 500\n",
+    "batch_size = 100\n",
+    "display_step = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 神经网络参数\n",
+    "n_hidden_1 =300\n",
+    "n_hidden_2 = 100\n",
+    "num_input = 28 * 28\n",
+    "num_class = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf的输出\n",
+    "X = tf.placeholder(tf.float32, [None, num_input])\n",
+    "Y = tf.placeholder(tf.float32, [None, num_class])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 保存每一册的权重\n",
+    "weights = {\n",
+    "    'h1':tf.Variable(tf.random_normal([num_input, n_hidden_1])),\n",
+    "    'h2':tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2])),\n",
+    "    'out':tf.Variable(tf.random_normal([n_hidden_2, num_class]))\n",
+    "}\n",
+    "biases = {\n",
+    "    'b1':tf.Variable(tf.random_normal([n_hidden_1])),\n",
+    "    'b2':tf.Variable(tf.random_normal([n_hidden_2])),\n",
+    "    'out':tf.Variable(tf.random_normal([num_class])),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建神经网络模型\n",
+    "def neural_net(x):\n",
+    "    layer_1 = tf.add(tf.matmul(x, weights['h1']), biases['b1'])\n",
+    "    layer_2 = tf.add(tf.matmul(layer_1, weights['h2']), biases['b2'])\n",
+    "    out_layer = tf.matmul(layer_2, weights['out']) + biases['out']\n",
+    "    return out_layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-91-70edf8727731>:5: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 结果输出\n",
+    "logits = neural_net(X)\n",
+    "\n",
+    "# 定义损失和优化器:交叉熵\n",
+    "loss_op = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y_train_one_hot))\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)  #根据学习率去最小化loss\n",
+    "train_op = optimizer.minimize(loss_op)  #训练操作\n",
+    "\n",
+    "currect_pred = tf.equal(tf.argmax(logits, 1), tf.argmax(y_train_one_hot, 1))\n",
+    " #上一条语句判断结果是否相等，结果为true or false。求均值即为预测的正确率\n",
+    "accuracy = tf.reduce_mean(tf.cast(currect_pred, tf.float32)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = tf.global_variables_initializer()  #初始化所有的变量"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 开始训练\n",
+    "with tf.Session() as sess:\n",
+    "     # 执行初始化语句\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
