--- a/experimental/word2vec/01.ipynb
+++ b/experimental/word2vec/01.ipynb
@@ -2,141 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging"
+    "from gensim.models.word2vec import Word2Vec\n",
+    "import string\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "logging.basicConfig(format=\"%(asctime)s: %(levelname)s: %(message)s\", level=logging.INFO)"
+    "letter = string.ascii_lowercase[:100]\n",
+    "letters = [i for i in letter]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 快速例子\n",
-    "from gensim import corpora, models, similarities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = [[(0, 1.0), (1, 1.0), (2, 1.0)],\n",
-    "          [(2, 1.0), (3, 1.0), (4, 1.0), (5, 1.0), (6, 1.0), (8, 1.0)],\n",
-    "           [(1, 1.0), (3, 1.0), (4, 1.0), (7, 1.0)],\n",
-    "          [(0, 1.0), (4, 2.0), (7, 1.0)],\n",
-    "          [(3, 1.0), (5, 1.0), (6, 1.0)],\n",
-    "           [(9, 1.0)],\n",
-    "           [(9, 1.0), (10, 1.0)],\n",
-    "           [(9, 1.0), (10, 1.0), (11, 1.0)],\n",
-    "           [(8, 1.0), (10, 1.0), (11, 1.0)]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-05-23 18:19:12,841: INFO: collecting document frequencies\n",
-      "2018-05-23 18:19:12,842: INFO: PROGRESS: processing document #0\n",
-      "2018-05-23 18:19:12,844: INFO: calculating IDF weights for 9 documents and 11 features (28 matrix non-zeros)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 进行转换\n",
-    "tfidf = models.TfidfModel(corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vec = [(0, 1), (4, 1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 0.8075244024440723), (4, 0.5898341626740045)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(tfidf[vec])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-05-23 18:22:36,467: INFO: creating sparse index\n",
-      "2018-05-23 18:22:36,468: INFO: creating sparse matrix from corpus\n",
-      "2018-05-23 18:22:36,469: INFO: PROGRESS: at document #0\n",
-      "2018-05-23 18:22:36,477: INFO: created <9x12 sparse matrix of type '<class 'numpy.float32'>'\n",
-      "\twith 28 stored elements in Compressed Sparse Row format>\n"
-     ]
-    }
-   ],
-   "source": [
-    "index = similarities.SparseMatrixSimilarity(tfidf[corpus], num_features=12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(0, 0.4662244), (1, 0.19139354), (2, 0.2460055), (3, 0.82094586), (4, 0.0), (5, 0.0), (6, 0.0), (7, 0.0), (8, 0.0)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "sims = index[tfidf[vec]]\n",
-    "print(list(enumerate(sims)))\n",
-    "# print(list(enumerate(sims)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
